<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/my_primary"
        android:id="@+id/search_appbar">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/search_toolbar"
            app:title="@string/search_appbar_txt"
            app:titleTextColor="@color/white"
            app:contentInsetStart="16dp"
            app:navigationIcon="@drawable/ic_back"
            app:navigationIconTint="@color/white"
            app:contentInsetEnd="16dp"
            app:popupTheme="@style/ThemeOverlay.Material3.Light"
            app:subtitleTextAppearance="@style/Toolbar.TitleText"/>

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/search_ed_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/search_appbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/search_ib_search"
        android:layout_marginTop="18sp"
        android:hint="@string/username_et_hint"
        android:layout_marginStart="10dp"
        android:elevation="5dp"
        android:padding="10dp"
        android:background="@drawable/edit_text_rounded_corner"
        android:inputType="text"
         />

    <ImageButton
        android:id="@+id/search_ib_search"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:src="@drawable/icon_search"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintTop_toTopOf="@+id/search_ed_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/search_ed_username"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="12dp"
        app:tint="@color/my_primary"
        android:contentDescription="@string/search_image"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_rv_users"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/search_ed_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>