<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <View
        android:id="@+id/headerBackground"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:background="#2C6B6D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/icDone"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_done"
        app:tint="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"
        tools:visibility="visible"/>

    <!-- Profile Image -->
    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/circle_background"
        android:backgroundTint="@color/white"
        android:padding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/fragmentProfileIv"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:background="@drawable/circle_background"
        android:backgroundTint="@color/teal_light"
        android:contentDescription="@null"
        android:padding="24dp"
        android:src="@drawable/ic_person"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/ivProfileImage"
        app:layout_constraintEnd_toEndOf="@id/ivProfileImage"
        app:layout_constraintStart_toStartOf="@id/ivProfileImage"
        app:layout_constraintTop_toTopOf="@id/ivProfileImage" />


    <TextView
        android:id="@+id/fragmentProfileUsernameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/john_doe"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivProfileImage" />


    <TextView
        android:id="@+id/fragmentProfilePhoneTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/_01234512345"
        android:textColorHint="@color/gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragmentProfileUsernameTv" />


    <View
        android:id="@+id/contentBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerBackground"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/contentBackground"
        app:layout_constraintEnd_toEndOf="@id/contentBackground"
        app:layout_constraintTop_toTopOf="@id/contentBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvAccount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/account"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textSize="24sp"
                android:layout_marginVertical="24dp"/>

            <ImageView
                android:id="@+id/ivAccountArrow"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_marginEnd="32dp"
                android:layout_marginVertical="24dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_arrow_down"
                app:tint="@color/teal" />

        </LinearLayout>

        <EditText
            android:id="@+id/profileUpdateUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_et_hint"
            android:textColor="@color/teal"
            android:textColorHint="@color/teal_light"
            android:inputType="phone"
            android:layout_marginHorizontal="70dp"
            android:layout_marginBottom="24dp"
            android:padding="10dp"
            android:visibility="gone"/>


        <View
            android:id="@+id/divider_below_account"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="25dp"
            android:background="@color/teal_dark"
            />

        <TextView
            android:id="@+id/fragmentProfileLogoutTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_marginStart="32dp"
            android:layout_marginVertical="24dp"
          />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>